force-app/main/default/objects/EmailHeuristicRule__mdt/EmailHeuristicRule__mdt.object-meta.xml
<CustomObject>
    <label>Email Heuristic Rule</label>
    <pluralLabel>Email Heuristic Rules</pluralLabel>
</CustomObject>