force-app/main/default/objects/EmailHeuristicRule__mdt/fields/ApplyTo__c.field-meta.xml
<CustomField>
    <fullName>ApplyTo__c</fullName>
    <label>ApplyTo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOCAL</fullName>
                <default>true</default>
                <label>LOCAL</label>
            </value>
            <value>
                <fullName>DOMAIN</fullName>
            </value>
            <value>
                <fullName>FULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>