force-app/main/default/objects/EmailHeuristicRule__mdt/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
                <default>true</default>
                <label>HIGH</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>