force-app/main/default/objects/EmailHeuristicRule__mdt/fields/MatchType__c.field-meta.xml
<CustomField>
    <fullName>MatchType__c</fullName>
    <label>MatchType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGEX</fullName>
                <default>true</default>
                <label>REGEX</label>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>EXACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>